[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Elements/Ammeter/Ammeter.gd" type="Script" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter III/Ammeter/Ammeter.gd" type="Script" id=2]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/Weapon.png" type="Texture" id=3]
[ext_resource path="res://Resources/Objects/Circuit/Ammeter.png" type="Texture" id=4]
[ext_resource path="res://Objects/Elements/Ammeter/Ammeter.tscn" type="PackedScene" id=5]
[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.32932, 0.812298 )

[node name="Ammeter" instance=ExtResource( 6 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
color = Color( 0.431373, 0.431373, 0.431373, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 188.739, 82.4539 )
scale = Vector2( 0.510813, 0.510813 )
texture = ExtResource( 3 )

[node name="Ammeter" parent="." index="3" instance=ExtResource( 5 )]
position = Vector2( 222.176, 100.319 )
scale = Vector2( 1.45, 1.45 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="Ammeter" index="3"]
margin_left = -13.0
margin_top = -11.584
margin_right = 14.0
margin_bottom = 12.416
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circuit" type="Area2D" parent="." index="4"]

[node name="Sprite2" type="Sprite" parent="Circuit" index="0"]
position = Vector2( 123.587, 97.8595 )
scale = Vector2( 0.190653, 0.190653 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Circuit" index="1"]
position = Vector2( 172.463, 64.5082 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Circuit" index="2"]
position = Vector2( 172.463, 135.891 )
shape = SubResource( 1 )

[node name="InstructionLabel" type="Label" parent="." index="5"]
margin_left = 68.7771
margin_top = 31.9452
margin_right = 121.777
margin_bottom = 45.9452
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="6"]
margin_left = 165.473
margin_top = 6.91803
margin_right = 218.473
margin_bottom = 20.918
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ia" type="LineEdit" parent="." index="7"]
visible = false
margin_left = 202.493
margin_top = 91.008
margin_right = 260.493
margin_bottom = 115.008
rect_scale = Vector2( 0.7, 0.7 )
align = 1
placeholder_text = "Ia"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Ammeter/Button" to="Ammeter" method="_on_Button_pressed"]
[connection signal="area_entered" from="Circuit" to="." method="_on_Circuit_area_entered"]
[connection signal="text_entered" from="Ia" to="." method="_on_Ia_text_entered"]
